# mkgraphic

./: Cargo.toml  README.md
examples/: elements_gallery.rs  hello.rs
src/: lib.rs
src/element/: align.rs  button.rs  checkbox.rs  composite.rs  context.rs  dial.rs  floating.rs  grid.rs  label.rs  layer.rs  list.rs  margin.rs  menu.rs  mod.rs  progress.rs  proxy.rs  scroll.rs  size.rs  slider.rs  status_bar.rs  switch.rs  tabs.rs  text_box.rs  thumbwheel.rs  tile.rs  tooltip.rs
src/host/: linux.rs  macos.rs  mod.rs  windows.rs
src/support/: canvas.rs  circle.rs  color.rs  font.rs  mod.rs  payload.rs  point.rs  rect.rs  theme.rs
src/view/: mod.rs
