[package]
name = "mkgraphic"
version = "0.2.0"
edition = "2021"
description = "A Rust port of the cycfi/elements GUI framework"
license = "MIT"
documentation = "https://docs.rs/mkgraphic"
repository = "https://github.com/mkaudio-company/mkgraphic"
authors = ["MinjaeKim"]

[features]
default = ["platform-native"]
platform-native = []

[dependencies]
# Core dependencies
bitflags = "2.4"
smallvec = "1.11"
thiserror = "1.0"
log = "0.4"

# Graphics backend - using tiny-skia for pure Rust 2D graphics
tiny-skia = "0.11"
fontdb = "0.16"
rustybuzz = "0.12"
ttf-parser = "0.20"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSData", "NSNotification", "NSThread", "NSRunLoop"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSWindow", "NSView", "NSEvent", "NSResponder", "NSGraphicsContext", "NSColor", "NSCursor", "NSPasteboard", "NSScreen", "NSTrackingArea", "NSText", "NSRunningApplication", "NSGraphics"] }
core-graphics = "0.23"
core-foundation = "0.9"
foreign-types = "0.5"
block2 = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_System_Com",
]}

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[dev-dependencies]
env_logger = "0.10"
